<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="pt.ubi.pedrocavaleiro.standingsick.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/orbitron"
        android:text="@string/app_name"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/appSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/orbitron"
        android:text="@string/app_subtitle"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appName" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="58dp"
        android:layout_marginTop="80dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/buttonArea"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appSubtitle">

            <TextView
                android:id="@+id/tvCurrQuestion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Pergunta 1 de 1"
                android:textSize="14sp" />

            <ProgressBar
                android:id="@+id/pgCurrQuestion"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="2"
                android:progress="1" />

            <TextView
                android:id="@+id/tvQuestion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:text="TextView"
                android:textSize="30sp" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:isScrollContainer="false">

                <LinearLayout
                    android:id="@+id/questionsArea"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" />
            </ScrollView>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonArea"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btnprevious"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="previousQuestion"
            android:text="@string/button_prev" />

        <Button
            android:id="@+id/btnnext"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="nextQuestion"
            android:text="@string/button_next" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
